<resources>
    <string name="app_name">P1_Landz</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="splash_tip1">专注高端房源</string>
    <string name="splash_tip01">全部豪宅  精准过滤无效信息专注高端10年\n
        最理解您之所需</string>
    <string name="splash_tip2">专业服务真实可信</string>
    <string name="splash_tip02">75%二本学历+严苛认证  确保专业品质\n
        全部信息内网对接 绝无虚假</string>
    <string name="splash_tip3">高效便捷</string>
    <string name="splash_tip03">联系一名顾问即可看遍京城豪宅\n
        买房也可如此简单</string>

    <string name="location">区域</string>
    <string name="price">价格</string>
    <string name="room">居室</string>
    <string name="type">类型</string>
    <string name="more">更多</string>

</resources>
