<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bwf.landz.ui.online.OnLineHouseActivity"
    tools:showIn="@layout/activity_on_line_house">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/withe"
            android:text="@string/location"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@color/withe"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/tv_room"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@color/withe"
            android:text="@string/room"/>
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@color/withe"
            android:text="@string/type"/>
        <TextView
            android:id="@+id/tv_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@color/withe"
            android:text="@string/more"/>


    </LinearLayout>

</LinearLayout>
